Changing package name

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CV_FPV</string>
+    <string name="experience">Experiencia</string>
+    <string name="skills">Skills</string>
 </resources>
