--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CV_FPV</string>
     <string name="experience">Experiencia</string>
     <string name="skills">Skills</string>
+    <string name="error_message">Ha ocurrido un error al carga tus datos</string>
 </resources>
